--- a/week-1/portfolio/css/styles.css
+++ b/week-1/portfolio/css/styles.css
@@ -1,17 +1,7 @@
 /* RESET */
 @import url(variables.css);
-* {
-    margin: 0;
-    padding: 0;
-    line-height: normal;
-    box-sizing: border-box;
-    text-wrap: pretty;
-    overflow-wrap: break-word;
-    transition: transform 0.2s, box-shadow 0.2s;
-    text-decoration: none;
-  }
-  
-  /* START */
+
+@import url(reset.css);
   
   body {
     background: var(--BG);
