--- a/week-1/portfolio/css/variables.css
+++ b/week-1/portfolio/css/variables.css
@@ -1,10 +1,74 @@
+
+  /* Design Tokens — Ian Szymanski's Portfolio */
+
+/* Color Tokens */
 :root {
-    --Black-Hole: #05030a;
-    --Supernova: #f5fff8;
-    --Moonrock: #d9d9d9;
-    --Galaxy: #af36ff;
-    --Plasma: #00ffae;
-    --Button-Gradient: linear-gradient(90deg, #00ffae 0%, #af36ff 100%);
-    --Drop-Shadow: 0.5vw 0.5vw 0px #05030a;
-    --BG: linear-gradient(90deg, #f5fff8 0%, #d9d9d9 100%);
+    --color-purple: #af36ff;
+    --color-green: #00ffae;
+    --light-surface-color: #ffffff;
+    --dark-surface-color: #181718;
+    --dark-surface-accent: #2b2a2b;
+    --light-surface-accent: #c9c9c9;
+    --gradient-primary: linear-gradient(90deg, var(--color-green) 0%, var(--color-purple) 100%);
+    --shadow-drop: 0.5vw 0.5vw 0px var(--dark-surface-color);
+    --gradient-background: linear-gradient(90deg, var(--light-surface-color) 0%, var(--light-surface-accent) 100%);
   }
+
+/*use this for place holder*/ 
+/* Light mode  */ 
+[data-theme="light"] 
+{ --color-purple: #af36ff;
+    --color-green: #00ffae;
+    --light-surface-color: #ffffff;
+    --dark-surface-color: #181718;
+    --dark-surface-accent: #2b2a2b;
+    --light-surface-accent: #c9c9c9;
+    --gradient-primary: linear-gradient(90deg, var(--color-green) 0%, var(--color-purple) 100%);
+    --shadow-drop: 0.5vw 0.5vw 0px var(--dark-surface-color);
+    --gradient-background: linear-gradient(90deg, var(--light-surface-color) 0%, var(--light-surface-accent) 100%);
+  }
+
+/* Dark mode  */
+[data-theme="dark"] {
+  --color-purple: #af36ff;
+  --color-green: #00ffae;
+  --light-surface-color: #181718;
+  --dark-surface-color: #ffffff;
+  --dark-surface-accent: #c9c9c9;
+  --light-surface-accent: #2b2a2b;
+  --gradient-primary: linear-gradient(90deg, var(--color-green) 0%, var(--color-purple) 100%);
+  --shadow-drop: 0.5vw 0.5vw 0px var(--dark-surface-color);
+  --gradient-background: linear-gradient(90deg, var(--light-surface-color) 0%, var(--light-surface-accent) 100%);
+}
+
+/* Typography Tokens */
+:root {
+  --font-family-heading: "Owners XXWide", sans-serif;
+  --font-family-subheading: "Owners XNarrow", sans-serif;
+  --font-family-body: "Owners Text", sans-serif;
+  --font-size-h1: 8rem;
+  --font-size-h2: 6rem;
+  --font-size-h3: 6rem;
+  --font-size-h4: 4rem;
+  --font-size-body: 2rem;
+  --font-weight-regular: 400;
+  --font-weight-bold: 700;
+  --line-height-tight: 100%;
+  --line-height-relaxed: 114%;
+}
+
+/* Spacing Tokens */
+:root {
+  --spacing-xs: 0.5rem;
+  --spacing-sm: 1.5rem;
+  --spacing-md: 2rem;
+  --spacing-lg: 5.5rem;
+  --spacing-xl: 6.25rem;
+  --spacing-2xl: 7rem;
+  --spacing-3xl: 9rem;
+  --spacing-offset-sm: 2px;
+  --spacing-offset-md: 4px;
+  --spacing-offset-lg: 5px;
+  --image-size-sm: 90%;
+  --image-size-md: 40rem;
+}
