--- a/week-1/portfolio/css/styles.css
+++ b/week-1/portfolio/css/styles.css
@@ -94,13 +94,24 @@
     transition: background-color 0.3s ease, color 0.3s ease;
   }
   
-  a.theme-toggle {
+  .theme-toggle {
     cursor: pointer;
     padding: 0 var(--spacing-sm) 0 var(--spacing-sm);
     border: 4px solid;
     border-image: var(--gradient-primary) 1;
     background-color: var(--light-surface-color);
     text-align: center;
+  }
+
+  .theme-toggle:hover {
+    background-color: var(--dark-surface-color);
+    color: var(--light-surface-color);
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
+    transform: translateY(4px);
+  }
+
+  .theme-toggle:hover h4 {
+    color: var(--light-surface-color);
   }
   
   /* FLEX CONTROLS */
